test/1.2/errors/T_EBSSIZE.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

method init {
    /// ERROR EBSSIZE
    0xffff[13:15];
    /// ERROR EBSSIZE
    0xffff[64:0];
    local int i;
    /// ERROR EBSSIZE
    i = 0xffff[13:15];
}
